Works. Fix the change seats methods.