@@ -1,9 +1,13 @@
 package se.nackademin.cinema;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
@@ -11,7 +15,7 @@ import java.util.function.IntFunction;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-final class Cinema {
+public class Cinema {
 
     private static final int SEAT_PRICE = 150;
     private static final int COLUMN_SIZE = 8;
@@ -19,11 +23,11 @@ final class Cinema {
     private static final String BOOKED_SEATS_FILE = "dataFiles\\bookedSeats\\bookedSeats.txt";
     private static final String TICKETS_DIRECTORY = "dataFiles\\tickets\\";
 
-    private final String movie;
+    private final String movieTitle;
     private final Set<Seat> seats;
 
-    Cinema(String movie) {
-        this.movie = movie;
+    public Cinema(String movieTitle) {
+        this.movieTitle = movieTitle;
 
         IntFunction<Seat> seatNameGenerator = i -> {
             char row = (char) ('A' + i / COLUMN_SIZE);
@@ -37,10 +41,6 @@ final class Cinema {
                 .collect(Collectors.toCollection(TreeSet::new));
 
         loadBookedSeats();
-    }
-
-    String getMovie() {
-        return (this.movie != null) ? this.movie.toUpperCase() : "N/A";
     }
 
     Seat getSeat(String number) {
@@ -64,18 +64,28 @@ final class Cinema {
     }
 
     boolean changeSeat(Seat bookedSeat, Seat newSeat) {
-        if (bookedSeat != null && newSeat != null && seats.contains(bookedSeat) && seats.contains(newSeat)) {
-            if (bookedSeat.isBooked()) {
-                if (!newSeat.isBooked()) {
-                    bookedSeat.bookSeat(false);
-                    removeSavedBookedSeat(bookedSeat);
-                    return bookSeat(newSeat);
-                } else
-                    System.out.println("Seat is not available");
-            } else
-                System.out.println("Your seat has to be booked.");
-        } else
-            System.out.println("Seat does not exist.");
+        if (bookedSeat == null || newSeat == null || !seats.contains(bookedSeat) || !seats.contains(newSeat)) {
+            System.out.println("Invalid seats provided.");
+            return false;
+        }
+
+        if (!bookedSeat.isBooked()) {
+            System.out.println("You need a booked ticket in order to change the seats.");
+            return false;
+        }
+
+        if (newSeat.isBooked()) {
+            System.out.println("The new seat is not available.");
+            return false;
+        }
+
+
+//        if (changeTicket(ticket, bookedSeat, newSeat)) {
+//            bookedSeat.bookSeat(false);
+//            removeBookedSeat(bookedSeat);
+//            return bookSeat(newSeat);
+//        }
+
         return false;
     }
 
@@ -83,7 +93,7 @@ final class Cinema {
         if (seat != null && seats.contains(seat)) {
             if (seat.isBooked()) {
                 seat.bookSeat(false);
-                removeSavedBookedSeat(seat);
+                removeBookedSeat(seat);
                 return true;
             } else
                 System.out.println("Seat is available.");
@@ -114,66 +124,138 @@ final class Cinema {
         });
     }
 
-    void getTicket(List<String> fileData) {
-        String fileName = setPersonalizedTicketFileName(fileData);
-        Path filePath = Path.of(TICKETS_DIRECTORY + fileName);
-        String title = this.movie.toUpperCase() + "\n";
-        try {
-            Files.write(filePath, title.getBytes(), StandardOpenOption.CREATE);
-            Files.write(filePath, fileData, StandardOpenOption.APPEND);
+    void printTicket(List<String> fileData) {
+        String fileName = generatePersonalizedTicket(fileData);
+        final Path filePath = Paths.get(TICKETS_DIRECTORY + fileName);
+
+        try (var writer = Files.newBufferedWriter(filePath, StandardOpenOption.CREATE)) {
+            for (String line : fileData) {
+                writer.write(line);
+                writer.newLine();
+            }
         } catch (IOException e) {
             System.out.println("Error while printing ticket: " + e.getMessage());
-        }
-    }
-
-    private void saveBookedSeat(Seat seat) {
-        Path filePath = Path.of(BOOKED_SEATS_FILE);
-        try {
-            String seatInfo = "Seat: " + seat.getNumber() + "\n";
-            Files.write(filePath, seatInfo.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.APPEND);
-        } catch (IOException e) {
-            System.out.println("Error while saving booked seat: " + e.getMessage());
+            e.printStackTrace();
         }
     }
 
     private void loadBookedSeats() {
-        Path filePath = Path.of(BOOKED_SEATS_FILE);
-        try {
-            List<String> fileLinesList = Files.readAllLines(filePath);
-            fileLinesList.forEach(line -> {
-                String seatNumber = line.substring(line.indexOf(" ") + 1);
-                Seat seat = getSeat(seatNumber);
-                if (seat != null)
-                    seat.bookSeat(true);
-            });
+        try (var reader = Files.newBufferedReader(Paths.get(BOOKED_SEATS_FILE))) {
+            reader.lines()
+                    .filter(line -> line.startsWith(movieTitle))
+                    .findFirst()
+                    .ifPresent(bookedSeats -> Arrays.stream(bookedSeats.split(" "))
+                            .forEach(seatNumber -> {
+                                Seat currentSeat = getSeat(seatNumber);
+                                if (currentSeat != null)
+                                    getSeat(seatNumber).bookSeat(true);
+                            }));
         } catch (IOException e) {
-            System.out.println("Error while loading booked seats: " + e.getMessage());
+            System.out.println("Error while loading booked seat: " + e.getMessage());
+            e.printStackTrace();
         }
     }
 
-    private void removeSavedBookedSeat(Seat seat) {
-        Path filePath = Path.of(BOOKED_SEATS_FILE);
-        try {
-            List<String> fileLinesList = Files.readAllLines(filePath);
-            fileLinesList.removeIf(i -> i.endsWith(" " + seat.getNumber()));
-            Files.write(filePath, fileLinesList);
+
+    private void saveBookedSeat(Seat seat) {
+        Path path = Paths.get(BOOKED_SEATS_FILE);
+        try (BufferedReader reader = Files.newBufferedReader(path);
+             BufferedWriter writer = Files.newBufferedWriter(path, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
+
+            List<String> lines = reader.lines().collect(Collectors.toList());
+            boolean movieExists = lines.stream().anyMatch(line -> line.startsWith(movieTitle));
+
+            if (movieExists) {
+                lines = lines.stream()
+                        .filter(line -> line.startsWith(movieTitle))
+                        .map(line -> line.concat("%S ".formatted(seat)))
+                        .toList();
+            } else
+                lines.add("%s %S ".formatted(movieTitle, seat.getNumber()));
+
+            for (String line : lines) {
+                writer.write(line);
+                writer.newLine();
+            }
         } catch (IOException e) {
-            System.out.println("Error while overwriting booked seats: " + e.getMessage());
+            System.out.println("Error while saving booked seat: " + e.getMessage());
+            e.printStackTrace();
         }
     }
 
-    private String setPersonalizedTicketFileName(List<String> fileData) {
-        int nameDataIndex = 0;
-        int seatDataIndex = 3;
-        String whitespace = " ";
-        String underscore = "_";
-        String txtExtension = ".txt";
 
-        String nameData = fileData.get(nameDataIndex);
-        String retrieveFullName = nameData.substring(nameData.indexOf(whitespace) + 1);
-        String seatNumberData = fileData.get(seatDataIndex);
-        String retrieveSeatNumber = seatNumberData.substring(seatNumberData.indexOf(whitespace) + 1);
+    public boolean changeTicket(String ticket, Seat bookedSeat, Seat newSeat) {
+        final Path PATH = Paths.get(TICKETS_DIRECTORY + ticket);
+        final String DATE_TIME = "Date & Time: ";
+        final String SEAT = "Seat: ";
 
-        return retrieveFullName.replace(whitespace, underscore).concat(underscore).concat(retrieveSeatNumber).concat(txtExtension).toLowerCase();
+        if (!Files.exists(PATH)) {
+            System.out.println("No ticket was found.");
+            return false;
+        }
+
+        try {
+            var lines = Files.newBufferedReader(PATH).lines().toList();
+
+            if (lines.stream().noneMatch(line -> line.contains(bookedSeat.getNumber()))) {
+                System.out.println("Wrong seat according to the ticket.");
+                return false;
+            }
+
+            for (int i = 0; i < lines.size(); i++) {
+                String line = lines.get(i);
+                if (line.startsWith(SEAT))
+                    lines.set(i, SEAT.concat(newSeat.getNumber()));
+//                else if (line.startsWith(DATE_TIME))
+//                    lines.set(i, DATE_TIME.concat(getDateAndTime()));
+            }
+
+            Files.delete(PATH);
+            printTicket(lines);
+            removeBookedSeat(bookedSeat);
+            saveBookedSeat(newSeat);
+
+            return true;
+        } catch (IOException e) {
+            System.out.println("Error while updating ticket: " + e.getMessage());
+            e.printStackTrace();
+            return false;
+        }
+    }
+
+    private void removeBookedSeat(Seat seat) {
+        final Path PATH = Paths.get(BOOKED_SEATS_FILE);
+        try (var reader = Files.newBufferedReader(PATH);
+             var writer = Files.newBufferedWriter(PATH, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
+
+            List<String> bookedSeatData = reader.lines()
+                    .filter(line -> line.startsWith(movieTitle))
+                    .map(line -> line.replace(seat.getNumber(), ""))
+                    .toList();
+
+            for (String line : bookedSeatData) {
+                writer.write(line);
+                writer.newLine();
+            }
+        } catch (IOException e) {
+            System.out.println("Error while updating the booked seat: " + e.getMessage());
+            e.printStackTrace();
+        }
+    }
+
+    public String generatePersonalizedTicket(List<String> fileData) {
+        final int NAME_INDEX = 1;
+        final int SEAT_INDEX = 4;
+        final String WHITESPACE = " ";
+        final String UNDERSCORE = "_";
+        final String TXT_EXTENSION = ".txt";
+
+        final String NAME = fileData.get(NAME_INDEX);
+        final String FETCH_NAME = NAME.substring(NAME.indexOf(WHITESPACE) + 1);
+        final String SEAT = fileData.get(SEAT_INDEX);
+        final String FETCH_SEAT = SEAT.substring(SEAT.indexOf(WHITESPACE) + 1);
+
+
+        return FETCH_NAME.replace(WHITESPACE, UNDERSCORE).concat(UNDERSCORE).concat(FETCH_SEAT).concat(TXT_EXTENSION).toLowerCase();
     }
 }
